# CobraModelParser

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
cmakeModules/: FindEigen3.cmake
include/CobraModelParser/: BinaryDataElementNode.hpp  Byte.hpp  ByteParser.hpp  ByteQueue.hpp  DataElementNode.hpp  DataElementTag.hpp  DataTypesMapper.hpp  Exceptions.hpp  FileLoader.hpp  Header.hpp  MatFileV5DataType.hpp  MatlabFileV5DataType.hpp  MatlabV5ArrayDataSubelement.hpp  MatlabV5ArrayDataType.hpp  MatlabV5ArrayDataTypeParser.hpp  MatlabV5ArrayDataTypeTable.hpp  MatlabV5ArrayFlagsElement .hpp  MatlabV5DataElement.hpp  MatlabV5DataType.hpp  MatlabV5DataTypeTable.hpp  MatlabV5File.hpp  MatlabV5ParserImpl.hpp  Model.hpp  ModelBuilder.hpp  Parser.hpp  matlab2Eigen.hpp
include/CobraModelParser/MatlabV5/: ArrayDimensions.hpp  ArrayFlags.hpp  ArrayName.hpp  ArrayType.hpp  ArrayTypeTable.hpp  Body.hpp  DataElement.hpp  DataType.hpp  DataTypeTable.hpp  Field.hpp  FieldNameLength.hpp  FieldNames.hpp  Fields.hpp  Header.hpp  MatlabV5ArrayDataSubelement.hpp  MatlabV5ArrayDataTypeParser.hpp  MatlabV5ArrayDataTypeTable.hpp  MatlabV5ArrayDimensionsElement.hpp  MatlabV5ArrayFlagsElement.hpp  MatlabV5DataElement.hpp  MatlabV5DataTypeTable.hpp  MatlabV5ParserImpl.hpp  ParserImpl.hpp  PolytopeParser.hpp  Tag.hpp  TagBuilder.hpp  TagParser.hpp
test/: ByteParserTest.cpp  ByteQueueTest.cpp  CMakeLists.txt  FileLoaderTest.cpp  MatlabV5ArrayDataTypeParserTest.cpp  MatlabV5ParserImplTest.cpp  ModelTest.cpp  ParserTest.cpp  TagParserTest.cpp  matlab2EigenTest.cpp
test/resources/: .ecoli_core_model.mat.swp  unparsableFile.mat
