cmake_minimum_required(VERSION 3.9)
project(CobraModelParser LANGUAGES CXX VERSION "0.1.0")
set(PROJECT_DESCRIPTION  "Library for parsing Cobra Models into Eigen3 entities")

set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/cmakeModules")

find_package(Eigen3 REQUIRED)

set(CMAKE_CXX_STANDARD 17)

string(TOLOWER ${PROJECT_NAME} LIBRARY_NAME)

add_library(${LIBRARY_NAME} INTERFACE)

target_include_directories(${LIBRARY_NAME} INTERFACE
    ${EIGEN3_INCLUDE_DIR}
    include)

OPTION(TEST "ENABLES BUILDING AND EXECUTION OF TESTS WITH MAKE TEST" ON)
IF(TEST)
    MESSAGE(STATUS "TESTS WILL BE BUILT. USE -DTEST=OFF TO DISABLE.")
    enable_testing()
    ADD_SUBDIRECTORY(test)
ELSE()
    MESSAGE(STATUS "TESTS WILL NOT BE BUILT. USE -DTEST=ON TO ENABLE.")
ENDIF()

OPTION(EXAMPLE "ENABLES BUILDING AND EXECUTION OF EXAMPLES WITH MAKE EXAMPLE" OFF)
IF(EXAMPLE)
    MESSAGE(STATUS "EXAMPLES WILL BE BUILT. USE -DEXAMPLE=OFF TO DISABLE.")
    ADD_SUBDIRECTORY(example)
ELSE()
    MESSAGE(STATUS "EXAMPLES WILL NOT BE BUILT. USE -DEXAMPLE=ON TO ENABLE.")
ENDIF()
